--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "proxy": "http://localhost:5000/",
+    "proxy": "https://miniproject-gl2h.onrender.com",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
